--- a/villian.html
+++ b/villian.html
@@ -44,5 +44,40 @@
         }
 
     </script>
+    <hr>
+    <h2>Tree Image switcher</h2>
+    <div>
+        <img id="treePic"
+            src="tree1.jpg"
+            width="150"
+            height="150"
+            onclick="updatePic()"
+        >
+    </div>
+
+    <script>
+        let usePic = 1;
+
+        function updatePic(){
+            let img = document.getElementById("treePic");
+
+            switch(usePic) {
+                case 1:
+                    img.src = "tree2.jpg";
+                    usePic = 2;
+                    break;
+                
+                case 2:
+                    img.src = "tree3.jpg";
+                    usePic = 3;
+                    break;
+                
+                case 3: 
+                    img.src = "tree1.jpg";
+                    usePic = 1;
+                    break;
+            }
+        }
+    </script>
 </body>
 </html> 
